// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostListItem renders the default category logo 1`] = `
<li
  className="list__item"
>
  <div
    className="post__image"
  >
    <Link
      className="post__icon post__icon--default"
      replace={false}
      to="/udacity/8xf0y6ziyjabvozdd253nd"
    >
      <img
        alt="udacity"
        src="other.svg"
      />
    </Link>
  </div>
  <div
    className="list__item__data"
  >
    <h2
      className="post__title"
    >
      <Link
        replace={false}
        to="/udacity/8xf0y6ziyjabvozdd253nd"
      >
        Udacity is the best place to learn React
      </Link>
    </h2>
    <div
      className="list__item__meta"
    >
      <t
        ago={false}
        calendar={false}
        className="post__date"
        date={1467166872634}
        element="time"
        filter={[Function]}
        format="MMMM Do, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      />
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        thingtwo
      </span>
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        2 comment
        s
      </span>
    </div>
    <Connect(PostScoreContainer)
      id="8xf0y6ziyjabvozdd253nd"
    />
  </div>
  <div
    className="list__item__actions"
  >
    <Link
      className="list__item__actions__action"
      replace={false}
      to="/udacity/8xf0y6ziyjabvozdd253nd/edit"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
            ],
            "iconName": "edit",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Link>
    <a
      className="list__item__actions__action text-danger pointer"
      onClick={[Function]}
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f00d",
              "M323.1 441l53.9-53.9c9.4-9.4 9.4-24.5 0-33.9L279.8 256l97.2-97.2c9.4-9.4 9.4-24.5 0-33.9L323.1 71c-9.4-9.4-24.5-9.4-33.9 0L192 168.2 94.8 71c-9.4-9.4-24.5-9.4-33.9 0L7 124.9c-9.4 9.4-9.4 24.5 0 33.9l97.2 97.2L7 353.2c-9.4 9.4-9.4 24.5 0 33.9L60.9 441c9.4 9.4 24.5 9.4 33.9 0l97.2-97.2 97.2 97.2c9.3 9.3 24.5 9.3 33.9 0z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </a>
  </div>
</li>
`;

exports[`PostListItem renders the redux category logo 1`] = `
<li
  className="list__item"
>
  <div
    className="post__image"
  >
    <Link
      className="post__icon post__icon--redux"
      replace={false}
      to="/redux/8xf0y6ziyjabvozdd253nd"
    >
      <img
        alt="redux"
        src="redux.svg"
      />
    </Link>
  </div>
  <div
    className="list__item__data"
  >
    <h2
      className="post__title"
    >
      <Link
        replace={false}
        to="/redux/8xf0y6ziyjabvozdd253nd"
      >
        Udacity is the best place to learn React
      </Link>
    </h2>
    <div
      className="list__item__meta"
    >
      <t
        ago={false}
        calendar={false}
        className="post__date"
        date={1467166872634}
        element="time"
        filter={[Function]}
        format="MMMM Do, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      />
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        thingtwo
      </span>
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        2 comment
        s
      </span>
    </div>
    <Connect(PostScoreContainer)
      id="8xf0y6ziyjabvozdd253nd"
    />
  </div>
  <div
    className="list__item__actions"
  >
    <Link
      className="list__item__actions__action"
      replace={false}
      to="/redux/8xf0y6ziyjabvozdd253nd/edit"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
            ],
            "iconName": "edit",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Link>
    <a
      className="list__item__actions__action text-danger pointer"
      onClick={[Function]}
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f00d",
              "M323.1 441l53.9-53.9c9.4-9.4 9.4-24.5 0-33.9L279.8 256l97.2-97.2c9.4-9.4 9.4-24.5 0-33.9L323.1 71c-9.4-9.4-24.5-9.4-33.9 0L192 168.2 94.8 71c-9.4-9.4-24.5-9.4-33.9 0L7 124.9c-9.4 9.4-9.4 24.5 0 33.9l97.2 97.2L7 353.2c-9.4 9.4-9.4 24.5 0 33.9L60.9 441c9.4 9.4 24.5 9.4 33.9 0l97.2-97.2 97.2 97.2c9.3 9.3 24.5 9.3 33.9 0z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </a>
  </div>
</li>
`;

exports[`PostListItem renders without crashing 1`] = `
<li
  className="list__item"
>
  <div
    className="post__image"
  >
    <Link
      className="post__icon post__icon--react"
      replace={false}
      to="/react/8xf0y6ziyjabvozdd253nd"
    >
      <img
        alt="react"
        src="react.svg"
      />
    </Link>
  </div>
  <div
    className="list__item__data"
  >
    <h2
      className="post__title"
    >
      <Link
        replace={false}
        to="/react/8xf0y6ziyjabvozdd253nd"
      >
        Udacity is the best place to learn React
      </Link>
    </h2>
    <div
      className="list__item__meta"
    >
      <t
        ago={false}
        calendar={false}
        className="post__date"
        date={1467166872634}
        element="time"
        filter={[Function]}
        format="MMMM Do, YYYY"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        toNow={false}
        unix={false}
        utc={false}
      />
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        thingtwo
      </span>
      <span
        className="separator"
      >
         • 
      </span>
      <span>
        2 comment
        s
      </span>
    </div>
    <Connect(PostScoreContainer)
      id="8xf0y6ziyjabvozdd253nd"
    />
  </div>
  <div
    className="list__item__actions"
  >
    <Link
      className="list__item__actions__action"
      replace={false}
      to="/react/8xf0y6ziyjabvozdd253nd/edit"
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z",
            ],
            "iconName": "edit",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </Link>
    <a
      className="list__item__actions__action text-danger pointer"
      onClick={[Function]}
    >
      <FontAwesomeIcon$1
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f00d",
              "M323.1 441l53.9-53.9c9.4-9.4 9.4-24.5 0-33.9L279.8 256l97.2-97.2c9.4-9.4 9.4-24.5 0-33.9L323.1 71c-9.4-9.4-24.5-9.4-33.9 0L192 168.2 94.8 71c-9.4-9.4-24.5-9.4-33.9 0L7 124.9c-9.4 9.4-9.4 24.5 0 33.9l97.2 97.2L7 353.2c-9.4 9.4-9.4 24.5 0 33.9L60.9 441c9.4 9.4 24.5 9.4 33.9 0l97.2-97.2 97.2 97.2c9.3 9.3 24.5 9.3 33.9 0z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
    </a>
  </div>
</li>
`;
